--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.example.hemanthc98.homedepothackathon.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/button"
+        android:layout_width="187dp"
+        android:layout_height="97dp"
+        android:text="Lend"
+        tools:layout_editor_absoluteX="99dp"
+        tools:layout_editor_absoluteY="108dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="187dp"
+        android:layout_height="97dp"
+        android:text="Borrow"
+        tools:layout_editor_absoluteX="99dp"
+        tools:layout_editor_absoluteY="268dp" />
 
 </android.support.constraint.ConstraintLayout>
